--- a/index.html
+++ b/index.html
@@ -30,13 +30,37 @@
             <nav>
               <ul class="menu">
                 <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
+                <li>
+                  <a href="">Products</a>
+                  <ul class="sub-menu">
+                    <li><a href="#">Lorem ipsum dolor</a></li>
+                    <li><a href="#">Sit amet</a></li>
+                    <li><a href="#">Consectetur adipisicing</a></li>
+                    <li><a href="#">Tempor incididunt</a></li>
+                    <li><a href="#">Dolore magna aliqua</a></li>
+                    <li><a href="#">Ut enim ad minim veniam</a></li>
+                    <li><a href="#">Quis nostrud</a></li>
+                  </ul>
+                </li>
                 <li><a href="">Payment</a></li>
                 <li><a href="">Shipping</a></li>
               </ul>
             </nav>
           </div>
-          <div class="col-3">Search</div>
+          <div class="col-3">
+            <div class="search-basket">
+              <div class="search-form">
+                <input type="text" id="search" placeholder="search" />
+                <input type="button" id="search-submit" value="" />
+              </div>
+              <div class="basket-form">
+                <input type="button" id="basket" value="" />
+                <div class="basket-number">
+                  <span class="number-basket">4</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
